--- a/CH2_2_1_Tensorflow_Fundamentals.ipynb
+++ b/CH2_2_1_Tensorflow_Fundamentals.ipynb
@@ -49,7 +49,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "rNyYaVlgGlV4",
-        "outputId": "01eb84d4-7bb5-43e8-dda5-538990bae539"
+        "outputId": "b58210c1-e1a3-43c1-cb9e-9e8d98f95610"
       },
       "outputs": [
         {
@@ -115,20 +115,50 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 15,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "djqnrdi1GlV6",
-        "outputId": "16a5c83f-417f-43df-d671-e75e603a7882"
+        "outputId": "0e4a682a-adb7-4bf0-dbc8-ef5a2342ded5"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "tf.Tensor([[0.53927183 0.46072826]], shape=(1, 2), dtype=float32)\n"
+            "tf.Tensor([[0.5144774  0.48552266]], shape=(1, 2), dtype=float32)\n",
+            "\n",
+            "\n",
+            "\n",
+            "\n",
+            "Input x:\n",
+            "[[-0.35707638 -1.2846583   1.9658499   0.16300984]]\n",
+            "\n",
+            "Weights w1:\n",
+            "[[ 0.04320164 -0.03447263 -0.02441736]\n",
+            " [-0.00970455 -0.12105334 -0.01653595]\n",
+            " [-0.0389397  -0.06444611 -0.02856204]\n",
+            " [ 0.05787574  0.02316344 -0.06284467]]\n",
+            "\n",
+            "Biases b1:\n",
+            "[[ 0.04320164 -0.03447263 -0.02441736]]\n",
+            "\n",
+            "Weights w2:\n",
+            "[[ 0.04320164 -0.03447263]\n",
+            " [-0.02441736 -0.00970455]\n",
+            " [-0.12105334 -0.01653595]]\n",
+            "\n",
+            "Biases b2:\n",
+            "[[ 0.04320164 -0.03447263]]\n",
+            "\n",
+            "Hidden layer output h:\n",
+            "[[0.49328217 0.50260836 0.48479256]]\n",
+            "\n",
+            "Output y:\n",
+            "[[0.5144774  0.48552266]]\n",
+            "\n"
           ]
         }
       ],
@@ -164,7 +194,25 @@
         "# Computing y\n",
         "y = forward(h, w2, b2, tf.nn.softmax)\n",
         "\n",
-        "print(y)"
+        "print(y)\n",
+        "print(\"\\n\\n\\n\")\n",
+        "\n",
+        "\n",
+        "# Helper function to print arrays with a label\n",
+        "def print_var(name, var):\n",
+        "    # Check if var is a TensorFlow tensor before calling numpy()\n",
+        "    print(f\"{name}:\\n{var.numpy() if hasattr(var, 'numpy') else var}\\n\")\n",
+        "\n",
+        "# Print input and weights/biases\n",
+        "print_var(\"Input x\", x)\n",
+        "print_var(\"Weights w1\", w1)\n",
+        "print_var(\"Biases b1\", b1)\n",
+        "print_var(\"Weights w2\", w2)\n",
+        "print_var(\"Biases b2\", b2)\n",
+        "\n",
+        "# Also print intermediate and final outputs\n",
+        "print_var(\"Hidden layer output h\", h)\n",
+        "print_var(\"Output y\", y)\n"
       ]
     },
     {
@@ -182,7 +230,100 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "source": [
+        "\"\"\"คุณสามารถกำหนดตัวแปร TensorFlow ที่เป็นเวกเตอร์ 1 มิติขนาด 4 โดยมีค่าทุกองค์ประกอบเป็น 2 ได้ดังนี้:\"\"\"\n",
+        "v1 = tf.Variable(tf.constant(2.0, shape=[4]), dtype='float32')\n",
+        "print(v1)\n",
+        "arr = v1.numpy()\n",
+        "print(arr)\n",
+        "\n",
+        "v2 = tf.Variable(np.ones(shape=[4,3]), dtype='float32')\n",
+        "print(v2)\n",
+        "v3 = tf.Variable(tf.keras.initializers.RandomNormal() (shape=[3,4,5]), dtype='float32')\n",
+        "print(v3)\n",
+        "\n",
+        "v = tf.Variable(np.zeros(shape=[4,3]), dtype='float32')\n",
+        "v = v[0,2].assign(1)\n",
+        "print(v)\n",
+        "v = v[2:, :2].assign([[3,3],[3,3]])\n",
+        "print(v)"
+      ],
+      "metadata": {
+        "id": "ehFxZit84vJo",
+        "outputId": "32664186-14b3-4176-df1d-005d20e6829d",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 23,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "<tf.Variable 'Variable:0' shape=(4,) dtype=float32, numpy=array([2., 2., 2., 2.], dtype=float32)>\n",
+            "[2. 2. 2. 2.]\n",
+            "<tf.Variable 'Variable:0' shape=(4, 3) dtype=float32, numpy=\n",
+            "array([[1., 1., 1.],\n",
+            "       [1., 1., 1.],\n",
+            "       [1., 1., 1.],\n",
+            "       [1., 1., 1.]], dtype=float32)>\n",
+            "<tf.Variable 'Variable:0' shape=(3, 4, 5) dtype=float32, numpy=\n",
+            "array([[[ 8.28462362e-04,  7.38729769e-03, -3.91108431e-02,\n",
+            "          3.18394229e-02,  2.38294844e-02],\n",
+            "        [-1.09485074e-04,  5.56870773e-02, -3.14714131e-03,\n",
+            "          2.66686287e-02, -6.96774051e-02],\n",
+            "        [-7.31765851e-02, -3.10398433e-02,  2.17106082e-02,\n",
+            "          1.79353709e-04, -4.95950840e-02],\n",
+            "        [ 7.55786225e-02,  5.74440025e-02, -5.95997982e-02,\n",
+            "          4.86831069e-02, -8.68043583e-03]],\n",
+            "\n",
+            "       [[-3.96884196e-02,  4.63483743e-02,  1.47704054e-02,\n",
+            "         -1.23295290e-02, -3.66857052e-02],\n",
+            "        [ 5.59427543e-03, -4.32894230e-02, -2.00157817e-02,\n",
+            "         -4.44925986e-02, -2.02587675e-02],\n",
+            "        [-2.55775601e-02, -6.32919371e-02,  3.19382874e-04,\n",
+            "         -5.21647707e-02,  7.55530894e-02],\n",
+            "        [ 2.72356663e-02, -8.00947845e-03, -2.72538606e-02,\n",
+            "         -4.83157299e-02, -8.74717385e-02]],\n",
+            "\n",
+            "       [[ 2.74515301e-02,  3.06451470e-02, -7.28160441e-02,\n",
+            "          2.53334697e-02, -7.35493973e-02],\n",
+            "        [ 1.45903025e-02,  4.75109331e-02,  2.29753815e-02,\n",
+            "          4.29740846e-02, -4.82186899e-02],\n",
+            "        [ 2.99581978e-02,  7.65139982e-02,  3.23313288e-02,\n",
+            "         -6.01846762e-02, -9.89377405e-03],\n",
+            "        [ 2.86111087e-02,  1.09721005e-01, -2.82932501e-02,\n",
+            "          1.09586176e-02,  2.32134461e-02]]], dtype=float32)>\n",
+            "<tf.Variable 'UnreadVariable' shape=(4, 3) dtype=float32, numpy=\n",
+            "array([[0., 0., 1.],\n",
+            "       [0., 0., 0.],\n",
+            "       [0., 0., 0.],\n",
+            "       [0., 0., 0.]], dtype=float32)>\n",
+            "<tf.Variable 'UnreadVariable' shape=(4, 3) dtype=float32, numpy=\n",
+            "array([[0., 0., 1.],\n",
+            "       [0., 0., 0.],\n",
+            "       [3., 3., 0.],\n",
+            "       [3., 3., 0.]], dtype=float32)>\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "v = tf.Variable(np.ones(shape=[4,3]), dtype='float32')\n",
+        "b = v * 3.0\n"
+      ],
+      "metadata": {
+        "id": "jntbVriL-Sqn"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -252,7 +393,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -315,7 +456,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -409,7 +550,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -482,7 +623,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -564,7 +705,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -618,7 +759,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -683,7 +824,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -735,7 +876,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
