--- a/CH2_2_1_Tensorflow_Fundamentals.ipynb
+++ b/CH2_2_1_Tensorflow_Fundamentals.ipynb
@@ -249,11 +249,11 @@
         "print(v)"
       ],
       "metadata": {
-        "id": "ehFxZit84vJo",
-        "outputId": "32664186-14b3-4176-df1d-005d20e6829d",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "ehFxZit84vJo",
+        "outputId": "32664186-14b3-4176-df1d-005d20e6829d"
       },
       "execution_count": 23,
       "outputs": [
@@ -313,12 +313,50 @@
       "cell_type": "code",
       "source": [
         "v = tf.Variable(np.ones(shape=[4,3]), dtype='float32')\n",
-        "b = v * 3.0\n"
+        "b = v * 3.0\n",
+        "print(type(b).__name__)\n",
+        "assert isinstance(b, tf.Tensor)\n",
+        "\n",
+        "a = tf.constant(2, shape=[4], dtype='float32')\n",
+        "b = tf.constant(3, shape=[4], dtype='float32')\n",
+        "c = tf.add(a, b)\n",
+        "print(c)\n",
+        "assert isinstance(c, tf.Tensor)\n"
       ],
       "metadata": {
-        "id": "jntbVriL-Sqn"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "jntbVriL-Sqn",
+        "outputId": "343fd55f-19bb-4428-d945-d552c911345f"
       },
-      "execution_count": null,
+      "execution_count": 32,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "EagerTensor\n",
+            "tf.Tensor([5. 5. 5. 5.], shape=(4,), dtype=float32)\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "\"\"\"tf.Variable เป็น mutable\n",
+        "\n",
+        "tf.Tensor เป็น immutable\n",
+        "\n",
+        "ลองดูว่าจะเกิดอะไรขึ้นหากเราพยายามเปลี่ยนค่าของ tf.Tensor ที่ถูกกำหนดไว้แล้ว:\"\"\"\n",
+        "a = tf.constant(2, shape=[4], dtype='float32')\n",
+        "#a = a[0].assign(2.0)\n"
+      ],
+      "metadata": {
+        "id": "eHU5Q5X6AcFE"
+      },
+      "execution_count": 35,
       "outputs": []
     },
     {
